Закончил верстку и мобильный дизайн

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import instagramIcon from "@assets/icons/instagram.svg";
 import Anchor from "./Anchor.astro";
 
 import { Image } from "astro:assets";
-import { links } from "../constants/links";
+import { links } from "@constants/links";
 ---
 
 <div class="border-t-2 border-green"></div>
