--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,43 +1,22 @@
 ---
-import "../styles/global.css";
-import Header from "../components/Header.astro";
+import MainLayout from "@layouts/MainLayout.astro";
+import About from "@sections/About.astro";
+import Conditions from "@sections/Conditions.astro";
+import Entertainments from "@sections/Entertainments.astro";
+import Form from "@sections/Form.astro";
+import Gallery from "@sections/Gallery.astro";
+import Moments from "@sections/Moments.astro";
+import Placement from "@sections/Placement.astro";
+import Rules from "@sections/Rules.astro";
 ---
 
-<html lang="ru">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <meta
-      name="description"
-      content="Палаточный лагерь «Седой Кшурт» в Северной Осетии — идеальное место для отдыха на природе! Окунитесь в атмосферу уюта и приключений среди живописных гор и чистых рек. Лагерь «Седой Кшурт» предлагает комфортное размещение в палатках, разнообразные развлечения для всей семьи: походы, мастер-классы, спортивные игры, экскурсии и вечерние костры. Насладитесь свежим горным воздухом, великолепными пейзажами и тёплой атмосферой дружбы. Добро пожаловать в сердце Северной Осетии — в лагерь «Седой Кшурт», где каждый найдёт отдых по душе!"
-    />
-    <meta name="robots" content="index, follow" />
-
-    <title>Кемпинг &quot;Седой Кшурт&quot;</title>
-  </head>
-  <body class="text-primary">
-    <Header />
-
-    <section class="flex flex-col gap-10">
-      <img src="/images/hero-ill.png" alt="hero-ill" />
-      <article class="flex flex-col gap-2.5">
-        <h1 class="uppercase font-semibold">Палаточный лагерь «Седой Кшурт»</h1>
-        <h6>
-          Место, где чистый горный воздух, потрясающие виды и настоящая свобода
-          сливаются воедино. Здесь вас ждут захватывающие походы, уютные вечера
-          у костра и полное единение с природой. Независимо от того, ищете ли вы
-          активный отдых или тихий уголок для перезагрузки, у нас есть всё для
-          комфортного пребывания в горах.
-        </h6>
-
-        <a
-          href="#"
-          class="py-3.5 px-5 bg-primary text-white flex justify-center items-center rounded-xl"
-          >Забронировать место
-        </a>
-      </article>
-    </section>
-  </body>
-</html>
+<MainLayout>
+  <About />
+  <Placement />
+  <Entertainments />
+  <Moments />
+  <Conditions />
+  <Gallery />
+  <Rules />
+  <Form />
+</MainLayout>
